<resources>
    <string name="app_name">Sésame</string>
    <string name="title_profile">Mon profil</string>
    <string name="title_add_pets">Compagnon +</string>
    <string name="title_pet">Compagnon</string>
    <string name="title_activity">Activités</string>
    <string name="title_settings">Paramètres</string>
    <string name="title_schedule">Créneaux de déverrouillage</string>
    <string name="title_add_schedule">Créneaux de déverrouillage +</string>

    <string name="register_btn">S\'inscrire</string>
    <string name="add_btn">Ajouter</string>
    <string name="send_btn">Envoyer</string>
    <string name="cancel_btn">Annuler</string>
    <string name="google_btn">Se connecter avec Google</string>
    <string name="confirm_btn">Confirmer</string>
    <string name="logout_btn">Déconnexion</string>
    <string name="profile_btn">Profil et préférences</string>
    <string name="pets_btn">Mes compagnons</string>
    <string name="language_btn">Français</string>
    <string name="region_btn">Région</string>


    <string name="firstname_input">Prénom</string>
    <string name="lastname_input">Nom</string>
    <string name="nickname_input">Surnom</string>
    <string name="species_input">Espèce</string>
    <string name="email_input">Courriel</string>
    <string name="phone_input">Téléphone</string>
    <string name="password_input">Mot de passe</string>
    <string name="confirm_password_input">Confirmation</string>
    <string name="code_input">Code</string>

    <string name="inside_message">Entrée</string>
    <string name="outside_message">Sortie</string>
    <string name="home_message">La porte est déverrouillée</string>
    <string name="forgot_message">Mot de passe oublié?</string>
    <string name="preregister_message">Pas encore de compte?</string>
    <string name="register_message">Création de votre compte</string>
    <string name="email_recup_message">Entrez votre adresse courriel</string>
    <string name="code_recup_message">Entrez votre code de confirmation</string>
    <string name="password_recup_message">Entrez votre nouveau mot de passe</string>
    <string name="change_password_message">Changer de mot de passe</string>
    <string name="dotw_message">Jour de la semaine</string>
    <string name="dotw_error_message">Sélectionnez une date pour votre cédule</string>
    <string name="unlock_message">Déverouillage</string>
    <string name="lock_message">Verouillage</string>
    <string name="last_activity_message">Pas encore de sortie aujourd\'hui</string>
    <string name="total_activity_message">Pas encore de total encore</string>
    <string name="no_activity_message">Aucune activitée pour aujourdhui </string>
    <string name="no_pet_message">Aucun animal pour le moment  </string>
    <string name="pet_edit">Quel compagnon voulez-vous mettre à jour ?   </string>
    <string name="home_unlock_message">La porte est déverrouillée</string>
    <string name="home_lock_message">La porte est verrouillée</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="login_btn">Connexion</string>
</resources>