<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/righteous"
        android:text="@string/app_name"
        android:textColor="@color/orange"
        android:textColorHighlight="@color/orange"
        android:textColorHint="@color/orange"
        android:textColorLink="@color/orange"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/register_message"
        app:layout_constraintBottom_toTopOf="@+id/inputFirstName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintVertical_bias="0.3" />

    <androidx.cardview.widget.CardView
        android:id="@+id/inputFirstName"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        app:cardBackgroundColor="@color/gray"
        app:cardCornerRadius="15dp"
        app:cardElevation="15dp"
        app:layout_constraintBottom_toTopOf="@+id/inputEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle">

        <EditText
            android:id="@+id/etFirstName"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:background="@drawable/custom_input"
            android:drawableLeft="@drawable/drawable_person_pin_circle"
            android:drawablePadding="5dp"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:hint="@string/firstname_input"
            android:inputType="text"
            android:padding="10dp"
            android:textAlignment="gravity"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/etLastName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <View
            android:id="@+id/dividerFirstName"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="30dp"
            android:background="@color/lightGray"
            android:translationY="38dp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/inputLastName"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        app:cardBackgroundColor="@color/gray"
        app:cardCornerRadius="15dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toTopOf="@+id/inputEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle">

        <EditText
            android:id="@+id/etLastName"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/custom_input"
            android:drawablePadding="5dp"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:hint="@string/lastname_input"
            android:inputType="text"
            android:padding="10dp"
            android:textAlignment="gravity"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/etFirstName"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <View
            android:id="@+id/dividerLastName"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="30dp"
            android:background="@color/lightGray"
            android:translationY="38dp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/inputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        app:cardBackgroundColor="@color/gray"
        app:cardCornerRadius="15dp"
        app:cardElevation="15dp"
        app:layout_constraintBottom_toTopOf="@+id/inputPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputFirstName">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:background="@drawable/custom_input"
            android:drawableLeft="@drawable/drawable_email"
            android:drawablePadding="5dp"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:hint="@string/email_input"
            android:inputType="text"
            android:padding="10dp"
            android:textAlignment="gravity"
            android:textColorHint="@color/black" />

        <View
            android:id="@+id/dividerEmail"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="30dp"
            android:background="@color/lightGray"
            android:translationY="38dp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/inputPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        app:cardBackgroundColor="@color/gray"
        app:cardCornerRadius="15dp"
        app:cardElevation="15dp"
        app:layout_constraintBottom_toTopOf="@+id/inputMdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputEmail">

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:background="@drawable/custom_input"
            android:drawableLeft="@drawable/drawable_phone"
            android:drawablePadding="5dp"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:hint="@string/phone_input"
            android:inputType="text"
            android:padding="10dp"
            android:textAlignment="gravity"
            android:textColorHint="@color/black" />

        <View
            android:id="@+id/dividerPhone"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="30dp"
            android:background="@color/lightGray"
            android:translationY="38dp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/inputMdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        app:cardBackgroundColor="@color/gray"
        app:cardCornerRadius="15dp"
        app:cardElevation="15dp"
        app:layout_constraintBottom_toTopOf="@+id/btCardRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPhone">

        <EditText
            android:id="@+id/etMdp"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/custom_input"
            android:drawableLeft="@drawable/drawable_lock"
            android:drawablePadding="5dp"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:hint="@string/password_input"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textAlignment="gravity"
            android:textColorHint="@color/black" />

        <View
            android:id="@+id/dividerMdp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="30dp"
            android:background="@color/lightGray"
            android:translationY="38dp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btCardRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/custom_input"
        app:cardBackgroundColor="@color/orange"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp"
        app:contentPaddingLeft="10dp"
        app:contentPaddingRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputMdp">

        <Button
            android:id="@+id/btRegister"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/custom_no_border"
            android:drawablePadding="10dp"
            android:fontFamily="@font/poppins"
            android:text="@string/register_btn"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/gray"
            android:textColorHighlight="#000000"
            android:textColorLink="#000000"
            android:textIsSelectable="false"
            android:textSize="18sp" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>