<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitleSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/righteous"
        android:text="@string/title_settings"
        android:textColor="@color/orange"
        android:textColorHighlight="@color/orange"
        android:textColorHint="@color/orange"
        android:textColorLink="@color/orange"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26999998" />

    <androidx.cardview.widget.CardView
        android:id="@+id/btCardProfilSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/custom_input"
        android:foregroundGravity="center"
        app:cardBackgroundColor="@color/gray"
        app:cardCornerRadius="15dp"
        app:cardElevation="15dp"
        app:contentPaddingLeft="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleSetting">

        <Button
            android:id="@+id/bProfilSetting"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/custom_no_border"
            android:drawableLeft="@drawable/drawable_profil"
            android:drawablePadding="10dp"
            android:fontFamily="@font/poppins"
            android:onClick="replaceFragment"
            android:text="@string/profile_btn"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textColorHighlight="#000000"
            android:textColorLink="#000000"
            android:textIsSelectable="false"
            android:textSize="18sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btCardPetsSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/custom_input"
        app:cardBackgroundColor="@color/gray"
        app:cardCornerRadius="15dp"
        app:cardElevation="15dp"
        app:contentPaddingLeft="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btCardProfilSetting">

        <Button
            android:id="@+id/bMyPetsSetting"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/custom_no_border"
            android:drawableLeft="@drawable/drawable_bone"
            android:drawablePadding="10dp"
            android:fontFamily="@font/poppins"
            android:text="@string/pets_btn"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textColorHighlight="#000000"
            android:textColorLink="#000000"
            android:textIsSelectable="false"
            android:textSize="18sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btCardLanguageSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        app:cardBackgroundColor="@color/gray"
        app:cardCornerRadius="15dp"
        app:cardElevation="15dp"
        app:contentPaddingLeft="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btCardPetsSetting">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/auto_complete"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="15dp"
            android:background="@drawable/custom_no_border"
            android:fontFamily="@font/poppins"
            android:hint="@string/language_btn"
            android:textColorHint="@color/black"
            app:counterOverflowTextAppearance="@style/TextAppearance.AppCompat.Body1"
            app:counterTextAppearance="@style/TextAppearance.AppCompat.Body1"
            app:counterTextColor="@color/black"
            app:errorTextAppearance="@style/TextAppearance.AppCompat.Body1"

            app:helperTextTextAppearance="@style/TextAppearance.AppCompat.Body1"
            app:helperTextTextColor="@color/black"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Body1"
            app:hintTextColor="@color/black"
            app:placeholderTextColor="@color/black"
            app:prefixTextColor="@color/black"
            app:suffixTextColor="@color/black">

            <AutoCompleteTextView
                android:id="@+id/auto_complete_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:background="@drawable/custom_no_border"
                android:contentDescription="DropDownMenuPets"
                android:drawableStart="@drawable/drawable_language"
                android:drawablePadding="5dp"
                android:fontFamily="@font/poppins"
                android:inputType="none"
                android:paddingVertical="5dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/black"
                android:textColorHint="@color/black"
                android:textColorLink="@color/black"
                android:textSize="18sp" />


        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/dividerSpecies"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="30dp"
            android:background="@color/lightGray"
            android:translationY="45dp" />
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/btCardTimeZoneSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/custom_input"
        app:cardBackgroundColor="@color/gray"
        app:cardCornerRadius="15dp"
        app:cardElevation="15dp"
        app:contentPaddingLeft="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btCardLanguageSetting">

        <Button
            android:id="@+id/bTimeZoneSetting"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/custom_no_border"
            android:drawableLeft="@drawable/drawable_time_zone"
            android:drawableRight="@drawable/drawable_chevron"
            android:drawablePadding="10dp"
            android:fontFamily="@font/poppins"
            android:text="@string/region_btn"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textColorHighlight="#000000"
            android:textColorLink="#000000"
            android:textIsSelectable="false"
            android:textSize="18sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btCardLogoutSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/custom_input"
        app:cardBackgroundColor="@color/orange"
        app:cardCornerRadius="15dp"
        app:cardElevation="15dp"
        app:contentPaddingLeft="10dp"
        app:contentPaddingRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btCardTimeZoneSetting">

        <Button
            android:id="@+id/bLogoutSetting"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/custom_no_border"
            android:drawableLeft="@drawable/drawable_logout"
            android:drawablePadding="10dp"
            android:fontFamily="@font/poppins"
            android:text="@string/logout_btn"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@color/gray"
            android:textColorHighlight="#000000"
            android:textColorLink="#000000"
            android:textIsSelectable="false"
            android:textSize="18sp" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>